MOBACCTMGT-982 - Fix odd coloring after long pressing buttons on iOS +review CR-MOBACCTMGT

--- a/scss/acctmaint.app.scss
+++ b/scss/acctmaint.app.scss
@@ -22,11 +22,6 @@ $user-login-error-message-animation: all linear 0.5s;
 
 .version-update-view {
 
-    .button,
-    .button-stable:hover {
-        color: #FFFFFF;
-    }
-
     .title {
         padding-top: 10px;
     }
